--- a/age-calculator-app-main/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/age-calculator-app-main/index.html
@@ -51,7 +51,7 @@
     <p id="requiredMessage" class="hidden">* Required</p>
 
     Month
-    <select class="month" id="month" onchange="copySelectedMonth()" required>
+    <select class="month" id="buwan" onchange="copySelectedBuwan()" required>
       <option value="" disabled selected> MM </option>
       <option value="01"> 01 </option>
       <option value="02"> 02 </option>
@@ -77,7 +77,7 @@
       <p id="error"></p>
       <div class="left"> 
         <p id="inputYear"> -- </p>
-        <p id="selectedMonth"> -- </p>
+        <p id="selectedBuwan"> -- </p>
         <p id="selectedDay"> -- </p> 
       </div>
   
